adding table with input text boxes and buttons

--- a/index.html
+++ b/index.html
@@ -30,6 +30,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">9AM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">10AM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">11AM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">12PM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">1PM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">2PM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">3PM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">4PM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+          <tr>
+            <th scope="row">5PM</th>
+            <td colspan="4"><input type="text" id="task"></td>
+            <td><button></button></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
