adding id's to table rows

--- a/index.html
+++ b/index.html
@@ -30,52 +30,52 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <table class="table">
+      <table class="table table-hover">
         <tbody>
-          <tr>
-            <th scope="row">9AM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr9">
+            <td scope="row" class="time-block">9AM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">10AM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr10">
+            <td scope="row" class="time-block">10AM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">11AM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr11">
+            <td scope="row" class="time-block">11AM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">12PM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr12">
+            <td scope="row" class="time-block">12PM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">1PM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr13">
+            <td scope="row" class="time-block">1PM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">2PM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr14">
+            <td scope="row" class="time-block">2PM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">3PM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr15">
+            <td scope="row" class="time-block">3PM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">4PM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr16">
+            <td scope="row" class="time-block">4PM</td>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
-          <tr>
-            <th scope="row">5PM</th>
-            <td colspan="4"><input type="text" id="task"></td>
-            <td><button></button></td>
+          <tr id="hr17">
+            <th scope="row" class="time-block">5PM</th>
+            <td colspan="4"><textarea  id="task"></textarea></td>
+            <td><button class="saveBtn"></button></td>
           </tr>
         </tbody>
       </table>
